<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/bg_main_color"
    >

    <EditText
        android:id="@+id/search_by_title_input_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/search_by_title_input_SEARCHACTIVITY"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textStyle="bold"
        android:gravity="top"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/search_by_time_input_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/search_by_time_input_SEARCHACTIVITY"
        android:background="@drawable/rounded_corner"
        android:inputType="time"
        android:padding="18dp"
        android:textStyle="bold"
        android:gravity="top"
        android:textColor="@color/black"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/search_by_title_input_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/search_by_data_input_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/search_by_data_input_SEARCHACTIVITY"
        android:background="@drawable/rounded_corner"
        android:inputType="time"
        android:padding="18dp"
        android:textStyle="bold"
        android:gravity="top"
        android:textColor="@color/black"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/search_by_time_input_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/search_by_title_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/search_by_title_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_data_input_SEARCHACTIVITY" />


    <Button
        android:id="@+id/search_by_time_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/search_by_time_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_title_button_SEARCHACTIVITY" />

    <Button
        android:id="@+id/search_by_date_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/search_by_date_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_time_button_SEARCHACTIVITY" />


    <Button
        android:id="@+id/sort_A_Z_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/sort_A_Z_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_date_button_SEARCHACTIVITY" />

    <Button
        android:id="@+id/sort_Z_A_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/sort_Z_A_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_A_Z_button_SEARCHACTIVITY" />


    <Button
        android:id="@+id/sort_by_time_and_date_creation_button_SEARCHACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/sort_by_time_and_date_creation_button_SEARCHACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_Z_A_button_SEARCHACTIVITY" />

</androidx.constraintlayout.widget.ConstraintLayout>