<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_main_color"
    tools:context=".AddNewNoteActivity">

    <TextView
        android:id="@+id/add_new_note_text_ADDNEWNOTEACTIVITY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="206dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/add_new_note_text_ADDNEWNOTEACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_input_ADDNEWNOTEACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/title_input_ADDNEWNOTEACTIVITY"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textStyle="bold"
        android:gravity="top"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_input_ADDNEWNOTEACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/description_input_ADDNEWNOTEACTIVITY"
        android:inputType="textMultiLine"
        android:lines="20"
        android:padding="18dp"
        android:gravity="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input_ADDNEWNOTEACTIVITY" />

    <Button
        android:id="@+id/add_new_note_button_ADDNEWNOTEACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="25dp"
        android:text="@string/add_new_note_button_ADDNEWNOTEACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_input_ADDNEWNOTEACTIVITY" />


</androidx.constraintlayout.widget.ConstraintLayout>